--- a/templates/views/inputPost.pug
+++ b/templates/views/inputPost.pug
@@ -28,13 +28,13 @@ block content
                     p Minimum Number: &nbsp; 
                         input#minNum.form-control(type="number" name="minNum" value=0 min=0)
                         span &nbsp;
-                        i.fas(data-toggle="modal" data-target="#minModal" class="fa-question-circle")
+                        i.fas(data-bs-toggle="modal" data-bs-target="#minModal" class="fa-question-circle")
                         +modalBoxDark("minModal","Minimum Number")
                             p Minimum bound of the random number.
                     p Maximum Number: &nbsp; 
                         input#maxNum.form-control(type="number" name="maxNum" value=100 min=0)
                         span &nbsp;
-                        i.fas(data-toggle="modal" data-target="#maxModal" class="fa-question-circle")
+                        i.fas(data-bs-toggle="modal" data-bs-target="#maxModal" class="fa-question-circle")
                         +modalBoxDark("maxModal","Maximum Number")
                             p Maximum bound of the random number.
                     p Number of Random Numbers: &nbsp; 
@@ -47,7 +47,7 @@ block content
                                     option=i
                                 - i++;
                         span &nbsp;
-                        i.fas(data-toggle="modal" data-target="#countModal" class="fa-question-circle")
+                        i.fas(data-bs-toggle="modal" data-bs-target="#countModal" class="fa-question-circle")
                         +modalBoxDark("countModal","Number of Random Numbers")
                             p Number of random numbers required.
                 br
