--- a/templates/mixins/mixins.pug
+++ b/templates/mixins/mixins.pug
@@ -9,15 +9,14 @@ mixin modalBoxDark(id,title,param)
 			.modal-content
 				.modal-header
 					h3.modal-title(id=id+"Label")=title
-					button.close(type="button" data-dismiss="modal" aria-label="Close")
-						span(aria-hidden="true") &times;
+					button.btn-close.btn-close-white(type="button" data-bs-dismiss="modal" aria-label="Close")
 				.modal-body
 					if block 
 						block 
 					else
 						p Empty
 				.modal-footer
-					button.btn.btn-secondary(type="button" data-dismiss="modal") Close
+					button.btn.btn-secondary(type="button" data-bs-dismiss="modal") Close
 					
 mixin flash-messages(messages)
 	if messages
