--- a/templates/partials/navbar.pug
+++ b/templates/partials/navbar.pug
@@ -1,7 +1,7 @@
 nav#myNav.navbar.navbar-default.navbar-expand-lg.navbar-dark: .container.my-1
     a.navbar-brand(href='/'): img(src="/images/pi-transparent.png" width="30" height="30" alt="")
     a.navbar-brand(href='/') ExpressJS Template
-    button.navbar-toggler(type='button', data-toggle='collapse', data-target='#orderNav')
+    button.navbar-toggler(type='button', data-bs-toggle='collapse', data-bs-target='#orderNav')
         span.navbar-toggler-icon.navbar-light
     .collapse.navbar-collapse#orderNav
         ul.nav.navbar-nav.mr-auto
