--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -38,6 +38,6 @@ block content
 				#collapse1.collapse
 					p I inadvertently went to See's Candy last week (I was in the mall looking for phone repair), and as it turns out, See's Candy now charges a dollar -- a full dollar -- for even the simplest of their wee confection offerings. I bought two chocolate lollipops and two chocolate-caramel-almond things. The total cost was four-something. I mean, the candies were tasty and all, but let's be real: A Snickers bar is fifty cents. After this dollar-per-candy revelation, I may not find myself wandering dreamily back into a See's Candy any time soon.
 					p She didn't understand how changed worked. When she looked at today compared to yesterday, there was nothing that she could see that was different. Yet, when she looked at today compared to last year, she couldn't see how anything was ever the same.
-				a.read-more(data-toggle="collapse" href="#collapse1" aria-expanded="false" aria-controls="collapse1")
+				a.read-more(data-bs-toggle="collapse" href="#collapse1" aria-expanded="false" aria-controls="collapse1")
 					span.collapsed Show more
 					span.expanded Show less
