--- a/templates/views/inputAjax.pug
+++ b/templates/views/inputAjax.pug
@@ -15,13 +15,13 @@ block content
                 p Minimum Number: &nbsp; 
                     input#minNum.form-control(type="number" value=0 min=0)
                     span &nbsp;
-                    i.fas(data-toggle="modal" data-target="#numberMinModal" class="fa-question-circle")
+                    i.fas(data-bs-toggle="modal" data-bs-target="#numberMinModal" class="fa-question-circle")
                     +modalBoxDark("numberMinModal","Minimum Number")
                         p Minimum bound of the random number.
                 p Maximum Number: &nbsp; 
                     input#maxNum.form-control(type="number" value=100 min=0)
                     span &nbsp;
-                    i.fas(data-toggle="modal" data-target="#numberMaxModal" class="fa-question-circle")
+                    i.fas(data-bs-toggle="modal" data-bs-target="#numberMaxModal" class="fa-question-circle")
                     +modalBoxDark("numberMaxModal","Maximum Number")
                         p Maximum bound of the random number.
             br
